Notificaciones de compra en tre cliente y camion

--- a/WebApi_ElGas/Web.config
+++ b/WebApi_ElGas/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="data source=developmentds.eastus.cloudapp.azure.com;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   <add name="Model1" connectionString="data source=developmentds.eastus.cloudapp.azure.com;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="Microsoft.Azure.NotificationHubs.ConnectionString" value="Endpoint=sb://[your namespace].notificationhub.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
