--- a/WebApi_ElGas/packages.config
+++ b/WebApi_ElGas/packages.config
@@ -23,6 +23,11 @@
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor.es" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization.es" version="1.1.3" targetFramework="net461" />
@@ -38,6 +43,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.NotificationHubs" version="1.0.9" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
