--- a/WebApi_ElGas/Web.config
+++ b/WebApi_ElGas/Web.config
@@ -9,8 +9,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=developmentds.eastus.cloudapp.azure.com;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="Model1" connectionString="data source=developmentds.eastus.cloudapp.azure.com;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+ <!--
+ <add name="DefaultConnection" connectionString="data source=developmentds.eastus.cloudapp.azure.com;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="Model1" connectionString="data source=developmentds.eastus.cloudapp.azure.com;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=52.224.8.198;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+
+ -->   
+  <add name="DefaultConnection" connectionString="data source=52.224.8.198;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="Model1" connectionString="data source=52.224.8.198;initial catalog=ELGAS;user id=sa;password=Digital_2018;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  
+  
+  
   <appSettings>
     <add key="Microsoft.Azure.NotificationHubs.ConnectionString" value="Endpoint=sb://[your namespace].notificationhub.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]" />
   </appSettings>
