--- a/WebApi_ElGas/WebApi_ElGas.csproj
+++ b/WebApi_ElGas/WebApi_ElGas.csproj
@@ -249,10 +249,15 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Context\Cliente.cs" />
     <Compile Include="Context\Compra.cs" />
+    <Compile Include="Context\CompraCancelada.cs" />
     <Compile Include="Context\Distribuidor.cs" />
+    <Compile Include="Context\DistribuidorFirebase.cs" />
     <Compile Include="Context\Model1.cs" />
     <Compile Include="Context\Parametro.cs" />
+    <Compile Include="Context\PuntoSector.cs" />
     <Compile Include="Context\Ruta.cs" />
+    <Compile Include="Context\Sector.cs" />
+    <Compile Include="Context\SectorDistribuidor.cs" />
     <Compile Include="Context\sysdiagrams.cs" />
     <Compile Include="Context\TipoSuscripcion.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -260,6 +265,7 @@
     <Compile Include="Controllers\ComprasController.cs" />
     <Compile Include="Controllers\DistribuidorsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ParametroesController.cs" />
     <Compile Include="Controllers\Response.cs" />
     <Compile Include="Controllers\RutasController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -271,9 +277,11 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CompraResponse.cs" />
+    <Compile Include="Models\ComprasRequest.cs" />
     <Compile Include="Models\DistribuidorResponse.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Posicion.cs" />
+    <Compile Include="Models\SectorDistancia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
@@ -313,6 +321,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\WebApiElGas - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\WebApiElGas - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
