envio de correo con la clave para recuperar la contraseña

--- a/WebApi_ElGas/Web.config
+++ b/WebApi_ElGas/Web.config
@@ -22,6 +22,17 @@
   
   <appSettings>
     <add key="Microsoft.Azure.NotificationHubs.ConnectionString" value="Endpoint=sb://[your namespace].notificationhub.windows.net;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=[your secret]" />
+  
+     <!--
+   Configuración del cliente de correo para las notificaciones
+      -->
+    <add key="SmtpServer" value="smtp.gmail.com" />
+    <add key="SmtpPort" value="587" />
+    <add key="EnableSsl" value="True" />
+    <add key="Usuario" value="digitalstrategyec@gmail.com" />
+    <add key="Contrasena" value="Digital_2018" />
+
+  
   </appSettings>
   <system.web>
     <authentication mode="None" />
