--- a/WebApi_ElGas/WebApi_ElGas.csproj
+++ b/WebApi_ElGas/WebApi_ElGas.csproj
@@ -274,18 +274,30 @@
     </Compile>
     <Compile Include="Hubs\AzureHubUtils.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
+    <Compile Include="Migrations\201806081600176_InitialCreate.cs" />
+    <Compile Include="Migrations\201806081600176_InitialCreate.Designer.cs">
+      <DependentUpon>201806081600176_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808281928312_ApplicationDbContext.cs" />
+    <Compile Include="Migrations\201808281928312_ApplicationDbContext.Designer.cs">
+      <DependentUpon>201808281928312_ApplicationDbContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CompraResponse.cs" />
     <Compile Include="Models\ComprasRequest.cs" />
+    <Compile Include="Models\ContrasenaRequest.cs" />
     <Compile Include="Models\DistribuidorResponse.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Posicion.cs" />
     <Compile Include="Models\SectorDistancia.cs" />
+    <Compile Include="Plugins\EnviarCorreo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utils\CorreoUtil.cs" />
     <Compile Include="Utils\Geo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -383,6 +395,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201806081600176_InitialCreate.resx">
+      <DependentUpon>201806081600176_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808281928312_ApplicationDbContext.resx">
+      <DependentUpon>201808281928312_ApplicationDbContext.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
