--- a/WebApi_ElGas/WebApi_ElGas.csproj
+++ b/WebApi_ElGas/WebApi_ElGas.csproj
@@ -287,7 +287,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CompraResponse.cs" />
     <Compile Include="Models\ComprasRequest.cs" />
-    <Compile Include="Models\ContrasenaRequest.cs" />
+    <Compile Include="Models\PasswordRequest.cs" />
     <Compile Include="Models\DistribuidorResponse.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Posicion.cs" />
