--- a/WebApi_ElGas/Web.config
+++ b/WebApi_ElGas/Web.config
@@ -38,6 +38,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <globalization uiCulture="es" culture="es-ES"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
