--- a/WebApi_ElGas/WebApi_ElGas.csproj
+++ b/WebApi_ElGas/WebApi_ElGas.csproj
@@ -247,6 +247,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Context\Ciudad.cs" />
     <Compile Include="Context\Cliente.cs" />
     <Compile Include="Context\Compra.cs" />
     <Compile Include="Context\CompraCancelada.cs" />
@@ -261,6 +262,7 @@
     <Compile Include="Context\sysdiagrams.cs" />
     <Compile Include="Context\TipoSuscripcion.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CiudadController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
     <Compile Include="Controllers\ComprasController.cs" />
     <Compile Include="Controllers\DistribuidorsController.cs" />
@@ -268,6 +270,7 @@
     <Compile Include="Controllers\ParametroesController.cs" />
     <Compile Include="Controllers\Response.cs" />
     <Compile Include="Controllers\RutasController.cs" />
+    <Compile Include="Controllers\SectorsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -292,6 +295,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Posicion.cs" />
     <Compile Include="Models\SectorDistancia.cs" />
+    <Compile Include="Models\SectorRequest.cs" />
     <Compile Include="Plugins\EnviarCorreo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
